# Pybase2

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  database.md  guia-rapido.md  index.md  query.md  schema.md  seguranca.md
pybase/: __init__.py
pybase/crypto/: __init__.py  cipher.py
pybase/database/: __init__.py  database.py
pybase/exceptions/: __init__.py  errors.py
pybase/media/: __init__.py
pybase/query/: __init__.py  querier.py
pybase/schema/: __init__.py  field.py  schema.py  types.py
tests/: test_crypto_media.py  test_database.py  test_query.py  test_schema.py
