[project]
name = "python-pybase"
version = "0.1.0"
description = "A schema-driven, file-based database with encryption"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["pybase*"]
